--- a/connection.properties
+++ b/connection.properties
@@ -1,1 +1,1 @@
-url = jdbc:mysql://localhost:3306/taxi?user=root&password=root
+url = jdbc:mysql://localhost:3306/taxi?user=root&password=root&serverTimezone=UTC
