--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,5 +4,15 @@
            xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 		  http://java.sun.com/xml/ns/javaee/web-app_4_0.xsd"
            version="4.0">
-
+    <filter>
+        <filter-name>FilterContent</filter-name>
+        <filter-class>com.Serebriakov.model.FilterContent</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FilterContent</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
