--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,15 +4,49 @@
            xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 		  http://java.sun.com/xml/ns/javaee/web-app_4_0.xsd"
            version="4.0">
+    <resource-ref>
+        <description>MySQL Datasource</description>
+        <res-ref-name>jdbc/taxi</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
+    <context-param>
+        <param-name>encoding</param-name>
+        <param-value>UTF-8</param-value>
+    </context-param>
+
     <filter>
         <filter-name>FilterContent</filter-name>
-        <filter-class>com.Serebriakov.model.FilterContent</filter-class>
+        <filter-class>com.Serebriakov.model.filter.FilterContent</filter-class>
     </filter>
+
     <filter-mapping>
         <filter-name>FilterContent</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+    <jsp-config>
+        <taglib>
+            <taglib-uri>/WEB-INF/tags/SecurityTag</taglib-uri>
+            <taglib-location>/WEB-INF/tags/SecurityTag.tld</taglib-location>
+        </taglib>
+    </jsp-config>
+
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error_page.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error_page.jsp</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.RuntimeException</exception-type>
+        <location>/error_page.jsp</location>
+    </error-page>
 </web-app>
