--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,19 @@
         <param-value>UTF-8</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
+        <param-value>resources</param-value>
+    </context-param>
+    <context-param>
+        <param-name>javax.servlet.jsp.jstl.fmt.locale</param-name>
+        <param-value>en</param-value>
+    </context-param>
+    <context-param>
+        <param-name>locales</param-name>
+        <param-value>/WEB-INF/locales.properties</param-value>
+    </context-param>
+
     <filter>
         <filter-name>FilterContent</filter-name>
         <filter-class>com.Serebriakov.model.filter.FilterContent</filter-class>
