+minor fixes(i18n, default values in database)

--- a/resources/resources.properties
+++ b/resources/resources.properties
@@ -58,7 +58,7 @@ edit_user_jsp.title_user = User
 edit_user_jsp.edit_user = Edit user
 edit_user_jsp.your_login = Your login
 edit_user_jsp.your_discount = Your current discount
-edit_user_jsp.save_changes = Зберегти зміни
+edit_user_jsp.save_changes = Save changes
 cars_with_another_type.choose_type = Choose another taxi type
 cars_with_another_type.go_back = Go back
 error_page.error = Error
@@ -83,6 +83,7 @@ admin_page.table.time = Time
 admin_page.table.state = State
 admin_page.page.next = Next
 admin_page.page.previous = Previous
+admin_page.table.more = More
 receipt_info_jsp.title = Order info
 receipt_info_jsp.order = Order
 receipt_info_jsp.login = Login
@@ -100,3 +101,5 @@ receipt_info_jsp.back = Back
 state.created = Created
 state.confirmed = Confirmed
 state.done = Done
+locale_en = English
+locale_ua = Ukrainian [Українська]
